--- a/projetMetro/projetMetro.csproj
+++ b/projetMetro/projetMetro.csproj
@@ -113,6 +113,12 @@
     <Compile Include="formMain.Designer.cs">
       <DependentUpon>formMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="formPath.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formPath.Designer.cs">
+      <DependentUpon>formPath.cs</DependentUpon>
+    </Compile>
     <Compile Include="formUser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +150,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formMain.resx">
       <DependentUpon>formMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formPath.resx">
+      <DependentUpon>formPath.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formUser.resx">
       <DependentUpon>formUser.cs</DependentUpon>
