bugfixes formPath fichier paramètres permettant la sauvegarde des chemis de sauvegarde

--- a/projetMetro/App.config
+++ b/projetMetro/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="projetMetro.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="projetMetro.Parametres" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
@@ -8,4 +14,23 @@
       <remove invariant="MySql.Data.MySqlClient" />
       <add description=".Net Framework Data Provider for MySQL" invariant="MySql.Data.MySqlClient" name="MySQL Data Provider" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.10.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data>
+    <userSettings>
+        <projetMetro.Properties.Settings>
+            <setting name="pathPDF" serializeAs="String">
+                <value>C:\pdf</value>
+            </setting>
+            <setting name="pathCal" serializeAs="String">
+                <value>C:\cal</value>
+            </setting>
+        </projetMetro.Properties.Settings>
+        <projetMetro.Parametres>
+            <setting name="pathPDF" serializeAs="String">
+                <value>formPath.pdf</value>
+            </setting>
+            <setting name="pathCal" serializeAs="String">
+                <value>formPath.cal</value>
+            </setting>
+        </projetMetro.Parametres>
+    </userSettings>
+</configuration>
