--- a/projetMetro/App.config
+++ b/projetMetro/App.config
@@ -23,6 +23,9 @@
             <setting name="pathCal" serializeAs="String">
                 <value>C:\cal</value>
             </setting>
+            <setting name="nbEleveTotal" serializeAs="String">
+                <value>0</value>
+            </setting>
         </projetMetro.Properties.Settings>
         <projetMetro.Parametres>
             <setting name="pathPDF" serializeAs="String">
