improve formImport & formUser

--- a/projetMetro/App.config
+++ b/projetMetro/App.config
@@ -21,7 +21,7 @@
                 <value>C:\pdf</value>
             </setting>
             <setting name="pathCal" serializeAs="String">
-                <value>C:\cal</value>
+                <value>\\SRV-PRONOTE2017\edt</value>
             </setting>
             <setting name="pathServ" serializeAs="String">
                 <value>localhost</value>
